+ [OE-4641] fix autocomplete z-index to work in openeyes dialog windows + [OE-4641] added user search action + [OE-4641] added support for API calls to generate menu items

--- a/protected/assets/css/style.css
+++ b/protected/assets/css/style.css
@@ -5632,7 +5632,7 @@ tfoot.pagination-container .pagination-view-all {
 }
 /* line 36, ../sass/openeyes/components/_jquery-ui.scss */
 .open-eyes .ui-autocomplete {
-  z-index: 200 !important;
+  z-index: 1004 !important;
 }
 /* line 37, ../sass/openeyes/components/_jquery-ui.scss */
 .open-eyes .autocomplete-match {
